--- a/package.json
+++ b/package.json
@@ -4,19 +4,31 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev"
   },
   "dependencies": {
+    "@prisma/client": "^6.2.1",
+    "@privy-io/react-auth": "^3.10.0",
+    "@privy-io/wagmi": "^2.1.3",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@solana-program/system": "^0.10.0",
+    "@tanstack/react-query": "^5.90.12",
+    "ethers": "^5.8.0",
     "lucide-react": "^0.560.0",
     "next": "16.0.10",
     "postprocessing": "^6.38.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "three": "^0.181.2"
+    "three": "^0.181.2",
+    "viem": "^2.43.3"
   },
   "devDependencies": {
+    "prisma": "^6.2.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
